--- a/tsconfig.json
+++ b/tsconfig.json
@@ -32,7 +32,8 @@
   "include": [
     "src",
     ".eslintrc.cjs",
-    "vite.config.ts"
+    "vite.config.ts",
+    "postcss.config.cjs"
   ],
   "references": [
     {
