--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tauri build",
     "preview": "vite preview",
     "lint": "eslint src",
-    "typecheck": "tsc --noEmit"
+    "typecheck": "tsc --noEmit",
+    "icons": "tauri icon ./public/junimo.png"
   },
   "dependencies": {
     "@mantine/core": "^7.10.1",
