--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tauri-apps/api": ">=2.0.0-beta.0",
     "@tauri-apps/plugin-dialog": "2.0.0-beta.5",
     "@tauri-apps/plugin-fs": "2.0.0-beta.4",
+    "@tauri-apps/plugin-http": "2.0.0-beta.5",
     "@tauri-apps/plugin-shell": ">=2.0.0-beta.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -27,6 +28,7 @@
     "@nabla/vite-plugin-eslint": "^2.0.4",
     "@stylistic/eslint-plugin": "^2.1.0",
     "@tauri-apps/cli": ">=2.0.0-beta.0",
+    "@total-typescript/ts-reset": "^0.5.1",
     "@types/node": "^20.12.12",
     "@types/react": "^18.2.15",
     "@types/react-dom": "^18.2.7",
