--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -18,3 +18,4 @@ serde_json = "1"
 tauri-plugin-fs = "2.0.0-beta"
 tauri-plugin-dialog = "2.0.0-beta"
 tauri-plugin-persisted-scope = "2.0.0-beta"
+tauri-plugin-http = "2.0.0-beta"
